# targooV4

./: .env  .env.example  Cargo.toml  README.md  test_input.csv
ai/: bridge.py  requirements.txt  setup.sh
data/: dictionary.json
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
src/: aggregation.rs  api.rs  db.rs  gemini_client.rs  i18n.rs  ingest.rs  ledger.rs  main.rs  models.rs  output_factory.rs  physics.rs  scope3_aggregation.rs  scope3_classifier.rs  scope3_hybrid.rs  scope3_jurisdiction.rs  scope3_range.rs  scope3_types.rs  triage.rs
