[package]
name = "targoo_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum        = { version = "0.7",  features = ["multipart"] }
tokio       = { version = "1.36", features = ["full"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
serde       = { version = "1.0",  features = ["derive"] }
serde_json  = "1.0"
chrono      = { version = "0.4",  features = ["serde"] }
uuid        = { version = "1.7",  features = ["v4", "serde"] }
rust_xlsxwriter = "0.70"
zip         = { version = "0.6",  features = ["deflate"] }
sha2        = "0.10"
hex         = "0.4"
reqwest     = { version = "0.11", features = ["json", "blocking"] }
strsim      = "0.11"
calamine    = { version = "0.24", features = ["dates"] }
csv         = "1.3"
tower-http  = { version = "0.5",  features = ["cors"] }
